--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,115 +5,114 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇭🇰 香港-2.11MB/s(Youtube:不良林), server: 47.243.31.8, port: 51657, type: vmess, uuid: f0eb8855-d3a4-4fc4-98b6-711681c756b8, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: http, http-opts: {method: GET, path: [/], headers: {Host: [47.243.31.8]}}}
   - {name: 🇺🇸 美国-2.68MB/s(Youtube:不良林), server: us-am32-5.eqnode.net, port: 8081, type: ssr, cipher: aes-256-cfb, password: YFVrXZgRo, protocol: origin, obfs: tls1.2_ticket_auth, protocol-param: "", obfs-param: ""}
-  - {name: 🇨🇦 加拿大-1.13MB/s(Youtube:不良林), server: 138.197.166.205, port: 811, type: ss, cipher: chacha20-ietf-poly1305, password: Ultr@r00t_2017}
+  - {name: 🇨🇳 中国-326.6KB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 34003, type: trojan, password: eb2f8154-ff58-3b99-b393-28c8eecdbe64, sni: pp1.zhengzhongfeizhu.xyz, skip-cert-verify: true}
   - {name: 🇨🇳 中国-346.1KB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 32003, type: trojan, password: 2f606ee8-3cfa-30b2-a191-f88efe912f5c, sni: pp1.zhengzhongfeizhu.xyz, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-262.0KB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 34000, type: trojan, password: eb2f8154-ff58-3b99-b393-28c8eecdbe64, sni: pp1.zhengzhongfeizhu.xyz, skip-cert-verify: true}
-  - {name: 🇺🇸 美国-2.48MB/s(Youtube:不良林), server: bai-piao-wang-zhe10.98848.xyz, port: 22168, type: trojan, password: 685022af-2086-454c-8725-8ff6b6ab1d13, sni: bai-piao-wang-zhe10.98848.xyz, skip-cert-verify: true}
-  - {name: 🇬🇧 英国-348.8KB/s(Youtube:不良林), server: 178.62.16.161, port: 811, type: ss, cipher: chacha20-ietf-poly1305, password: Ultr@r00t_2017}
-  - {name: 🇺🇸 美国-2.67MB/s(Youtube:不良林), server: bai-piao-wang-zhe10.98848.xyz, port: 48240, type: trojan, password: 685022af-2086-454c-8725-8ff6b6ab1d13, sni: bai-piao-wang-zhe10.98848.xyz, skip-cert-verify: true}
+  - {name: 捷克-169.3KB/s(Youtube:不良林), server: 195.133.53.192, port: 43688, type: vmess, uuid: bd1c8b57-0a9e-4e9f-a261-48e90c871e41, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /, ws-headers: {Host: 195.133.53.192}}
+  - {name: 🇨🇦 加拿大-1.13MB/s(Youtube:不良林), server: 138.197.166.205, port: 811, type: ss, cipher: chacha20-ietf-poly1305, password: Ultr@r00t_2017}
   - {name: 🇦🇺 澳大利亚-1.82MB/s(Youtube:不良林), server: jgwxn3.gaox.ml, port: 443, type: trojan, password: cb43b7c2-b744-41c5-bcc2-fd7467b332cf, sni: jgwxn3.gaox.ml, skip-cert-verify: true}
   - {name: 🇦🇺 澳大利亚-1.20MB/s(Youtube:不良林), server: jgwxn4.gaox.ml, port: 443, type: trojan, password: e8c1ab3c-89b3-4933-92df-682e6dce7819, sni: jgwxn4.gaox.ml, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-318.8KB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 33002, type: trojan, password: eb2f8154-ff58-3b99-b393-28c8eecdbe64, sni: pp1.zhengzhongfeizhu.xyz, skip-cert-verify: true}
+  - {name: 🇦🇺 澳大利亚-1.15MB/s(Youtube:不良林), server: 185.167.116.250, port: 9006, type: ss, cipher: aes-256-cfb, password: FAdUvMJUq5vDgKEq}
+  - {name: 🇨🇳 中国-529.2KB/s(Youtube:不良林), server: in-sg-1.onebox6.org, port: 38701, type: vmess, uuid: 79386685-16da-327c-9e14-aa6d702d86bc, alterId: 1, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /hls/cctv5phd.m3u8, ws-headers: {Host: in-sg-1.onebox6.org}}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇭🇰 香港-2.11MB/s(Youtube:不良林)
       - 🇺🇸 美国-2.68MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.13MB/s(Youtube:不良林)
+      - 🇨🇳 中国-326.6KB/s(Youtube:不良林)
       - 🇨🇳 中国-346.1KB/s(Youtube:不良林)
-      - 🇨🇳 中国-262.0KB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.48MB/s(Youtube:不良林)
-      - 🇬🇧 英国-348.8KB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.67MB/s(Youtube:不良林)
+      - 捷克-169.3KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.13MB/s(Youtube:不良林)
       - 🇦🇺 澳大利亚-1.82MB/s(Youtube:不良林)
       - 🇦🇺 澳大利亚-1.20MB/s(Youtube:不良林)
+      - 🇨🇳 中国-318.8KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.15MB/s(Youtube:不良林)
+      - 🇨🇳 中国-529.2KB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇭🇰 香港-2.11MB/s(Youtube:不良林)
       - 🇺🇸 美国-2.68MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.13MB/s(Youtube:不良林)
+      - 🇨🇳 中国-326.6KB/s(Youtube:不良林)
       - 🇨🇳 中国-346.1KB/s(Youtube:不良林)
-      - 🇨🇳 中国-262.0KB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.48MB/s(Youtube:不良林)
-      - 🇬🇧 英国-348.8KB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.67MB/s(Youtube:不良林)
+      - 捷克-169.3KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.13MB/s(Youtube:不良林)
       - 🇦🇺 澳大利亚-1.82MB/s(Youtube:不良林)
       - 🇦🇺 澳大利亚-1.20MB/s(Youtube:不良林)
+      - 🇨🇳 中国-318.8KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.15MB/s(Youtube:不良林)
+      - 🇨🇳 中国-529.2KB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇭🇰 香港-2.11MB/s(Youtube:不良林)
       - 🇺🇸 美国-2.68MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.13MB/s(Youtube:不良林)
+      - 🇨🇳 中国-326.6KB/s(Youtube:不良林)
       - 🇨🇳 中国-346.1KB/s(Youtube:不良林)
-      - 🇨🇳 中国-262.0KB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.48MB/s(Youtube:不良林)
-      - 🇬🇧 英国-348.8KB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.67MB/s(Youtube:不良林)
+      - 捷克-169.3KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.13MB/s(Youtube:不良林)
       - 🇦🇺 澳大利亚-1.82MB/s(Youtube:不良林)
       - 🇦🇺 澳大利亚-1.20MB/s(Youtube:不良林)
+      - 🇨🇳 中国-318.8KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.15MB/s(Youtube:不良林)
+      - 🇨🇳 中国-529.2KB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
       - 🎯 全球直连
-      - 🇭🇰 香港-2.11MB/s(Youtube:不良林)
       - 🔰 节点选择
   - name: Ⓜ️ 微软服务
     type: select
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇭🇰 香港-2.11MB/s(Youtube:不良林)
       - 🇺🇸 美国-2.68MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.13MB/s(Youtube:不良林)
+      - 🇨🇳 中国-326.6KB/s(Youtube:不良林)
       - 🇨🇳 中国-346.1KB/s(Youtube:不良林)
-      - 🇨🇳 中国-262.0KB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.48MB/s(Youtube:不良林)
-      - 🇬🇧 英国-348.8KB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.67MB/s(Youtube:不良林)
+      - 捷克-169.3KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.13MB/s(Youtube:不良林)
       - 🇦🇺 澳大利亚-1.82MB/s(Youtube:不良林)
       - 🇦🇺 澳大利亚-1.20MB/s(Youtube:不良林)
+      - 🇨🇳 中国-318.8KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.15MB/s(Youtube:不良林)
+      - 🇨🇳 中国-529.2KB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇭🇰 香港-2.11MB/s(Youtube:不良林)
       - 🇺🇸 美国-2.68MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.13MB/s(Youtube:不良林)
+      - 🇨🇳 中国-326.6KB/s(Youtube:不良林)
       - 🇨🇳 中国-346.1KB/s(Youtube:不良林)
-      - 🇨🇳 中国-262.0KB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.48MB/s(Youtube:不良林)
-      - 🇬🇧 英国-348.8KB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.67MB/s(Youtube:不良林)
+      - 捷克-169.3KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.13MB/s(Youtube:不良林)
       - 🇦🇺 澳大利亚-1.82MB/s(Youtube:不良林)
       - 🇦🇺 澳大利亚-1.20MB/s(Youtube:不良林)
+      - 🇨🇳 中国-318.8KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.15MB/s(Youtube:不良林)
+      - 🇨🇳 中国-529.2KB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇭🇰 香港-2.11MB/s(Youtube:不良林)
       - 🇺🇸 美国-2.68MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.13MB/s(Youtube:不良林)
+      - 🇨🇳 中国-326.6KB/s(Youtube:不良林)
       - 🇨🇳 中国-346.1KB/s(Youtube:不良林)
-      - 🇨🇳 中国-262.0KB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.48MB/s(Youtube:不良林)
-      - 🇬🇧 英国-348.8KB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.67MB/s(Youtube:不良林)
+      - 捷克-169.3KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.13MB/s(Youtube:不良林)
       - 🇦🇺 澳大利亚-1.82MB/s(Youtube:不良林)
       - 🇦🇺 澳大利亚-1.20MB/s(Youtube:不良林)
+      - 🇨🇳 中国-318.8KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.15MB/s(Youtube:不良林)
+      - 🇨🇳 中国-529.2KB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -129,16 +128,16 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇭🇰 香港-2.11MB/s(Youtube:不良林)
       - 🇺🇸 美国-2.68MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.13MB/s(Youtube:不良林)
+      - 🇨🇳 中国-326.6KB/s(Youtube:不良林)
       - 🇨🇳 中国-346.1KB/s(Youtube:不良林)
-      - 🇨🇳 中国-262.0KB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.48MB/s(Youtube:不良林)
-      - 🇬🇧 英国-348.8KB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.67MB/s(Youtube:不良林)
+      - 捷克-169.3KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.13MB/s(Youtube:不良林)
       - 🇦🇺 澳大利亚-1.82MB/s(Youtube:不良林)
       - 🇦🇺 澳大利亚-1.20MB/s(Youtube:不良林)
+      - 🇨🇳 中国-318.8KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.15MB/s(Youtube:不良林)
+      - 🇨🇳 中国-529.2KB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
