--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,63 +5,63 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇨🇳 中国-374.7KB/s(Youtube:不良林), server: ingress-i1.onebox6.org, port: 38701, type: vmess, uuid: 79386685-16da-327c-9e14-aa6d702d86bc, alterId: 1, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /hls/cctv5phd.m3u8, ws-headers: {Host: ingress-i1.onebox6.org}}
-  - {name: 🇦🇺 澳大利亚-876.2KB/s(Youtube:不良林), server: 185.167.116.250, port: 9007, type: ss, cipher: aes-256-cfb, password: kSPmvwdFzGMMW5pY}
-  - {name: 🇨🇳 中国-164.5KB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 34003, type: trojan, password: eb2f8154-ff58-3b99-b393-28c8eecdbe64, sni: pp1.zhengzhongfeizhu.xyz, skip-cert-verify: true}
-  - {name: 🇫🇷 法国-1.76MB/s(Youtube:不良林), server: 54.37.192.112, port: 443, type: vmess, uuid: 9f58234c-355b-4065-ae21-d4a63099aba5, alterId: 64, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /path/120208301422, ws-headers: {Host: 54.37.192.112}}
-  - {name: 🇨🇦 加拿大-1.63MB/s(Youtube:不良林), server: 138.197.166.205, port: 811, type: ss, cipher: chacha20-ietf-poly1305, password: Ultr@r00t_2017}
-  - {name: 🇬🇧 英国-1.99MB/s(Youtube:不良林), server: jgwld4.gaox.ml, port: 443, type: trojan, password: 58d32c66-43b1-4561-9951-d87c9123774e, sni: jgwld4.gaox.ml, skip-cert-verify: true}
-  - {name: 🇺🇸 美国-4.75MB/s(Youtube:不良林), server: fhcamd2.gaox.ml, port: 443, type: trojan, password: dbf9bf9c-2c3f-474a-8031-d4c00666a989, sni: fhcamd2.gaox.ml, skip-cert-verify: true}
-  - {name: 🇯🇵 日本-4.20MB/s(Youtube:不良林), server: jgwdb4.gaox.ml, port: 443, type: trojan, password: d06a3f01-1ff0-4792-9b8e-a5a604bc74a2, sni: jgwdb4.gaox.ml, skip-cert-verify: true}
+  - {name: 🇺🇸 美国-2.31MB/s(Youtube:不良林), server: bai-piao-wang-zhe10.98848.xyz, port: 50858, type: trojan, password: 685022af-2086-454c-8725-8ff6b6ab1d13, sni: bai-piao-wang-zhe10.98848.xyz, skip-cert-verify: true}
+  - {name: 🇺🇸 美国-2.04MB/s(Youtube:不良林), server: s3.hazz.win, port: 12340, type: trojan, password: dfbf0d67-f03d-4184-a224-c2d64a571f99, sni: s3.hazz.win, skip-cert-verify: true}
+  - {name: 🇺🇸 美国-3.42MB/s(Youtube:不良林), server: s2.hazz.win, port: 12340, type: trojan, password: dfbf0d67-f03d-4184-a224-c2d64a571f99, sni: s2.hazz.win, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-261.0KB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 34003, type: trojan, password: eb2f8154-ff58-3b99-b393-28c8eecdbe64, sni: pp1.zhengzhongfeizhu.xyz, skip-cert-verify: true}
+  - {name: 🇨🇦 加拿大-386.5KB/s(Youtube:不良林), server: 158.69.167.203, port: 8080, type: vmess, uuid: 1b32668c-452f-40c3-c21c-ae3b7e4a5e64, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /, ws-headers: {Host: 158.69.167.203}}
   - {name: 🇸🇬 新加坡-2.18MB/s(Youtube:不良林), server: s4.hazz.win, port: 12340, type: trojan, password: dfbf0d67-f03d-4184-a224-c2d64a571f99, sni: s4.hazz.win, skip-cert-verify: true}
   - {name: 🇸🇬 新加坡-1.97MB/s(Youtube:不良林), server: s1.hazz.win, port: 12340, type: trojan, password: dfbf0d67-f03d-4184-a224-c2d64a571f99, sni: s1.hazz.win, skip-cert-verify: true}
+  - {name: 🇬🇧 英国-1.23MB/s(Youtube:不良林), server: 178.62.16.161, port: 811, type: ss, cipher: chacha20-ietf-poly1305, password: Ultr@r00t_2017}
+  - {name: 🇺🇸 美国-489.8KB/s(Youtube:不良林), server: 20.239.176.94, port: 443, type: vmess, uuid: 4adf9138-5aca-4a26-b217-335e72bb680d, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /, ws-headers: {Host: 20.239.176.94}}
+  - {name: 🇫🇷 法国-681.8KB/s(Youtube:不良林), server: 51.38.118.42, port: 811, type: ss, cipher: chacha20-ietf-poly1305, password: Ultr@r00t_2017}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇨🇳 中国-374.7KB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-876.2KB/s(Youtube:不良林)
-      - 🇨🇳 中国-164.5KB/s(Youtube:不良林)
-      - 🇫🇷 法国-1.76MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.63MB/s(Youtube:不良林)
-      - 🇬🇧 英国-1.99MB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.75MB/s(Youtube:不良林)
-      - 🇯🇵 日本-4.20MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.31MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.04MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.42MB/s(Youtube:不良林)
+      - 🇨🇳 中国-261.0KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-386.5KB/s(Youtube:不良林)
       - 🇸🇬 新加坡-2.18MB/s(Youtube:不良林)
       - 🇸🇬 新加坡-1.97MB/s(Youtube:不良林)
+      - 🇬🇧 英国-1.23MB/s(Youtube:不良林)
+      - 🇺🇸 美国-489.8KB/s(Youtube:不良林)
+      - 🇫🇷 法国-681.8KB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇨🇳 中国-374.7KB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-876.2KB/s(Youtube:不良林)
-      - 🇨🇳 中国-164.5KB/s(Youtube:不良林)
-      - 🇫🇷 法国-1.76MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.63MB/s(Youtube:不良林)
-      - 🇬🇧 英国-1.99MB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.75MB/s(Youtube:不良林)
-      - 🇯🇵 日本-4.20MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.31MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.04MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.42MB/s(Youtube:不良林)
+      - 🇨🇳 中国-261.0KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-386.5KB/s(Youtube:不良林)
       - 🇸🇬 新加坡-2.18MB/s(Youtube:不良林)
       - 🇸🇬 新加坡-1.97MB/s(Youtube:不良林)
+      - 🇬🇧 英国-1.23MB/s(Youtube:不良林)
+      - 🇺🇸 美国-489.8KB/s(Youtube:不良林)
+      - 🇫🇷 法国-681.8KB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇨🇳 中国-374.7KB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-876.2KB/s(Youtube:不良林)
-      - 🇨🇳 中国-164.5KB/s(Youtube:不良林)
-      - 🇫🇷 法国-1.76MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.63MB/s(Youtube:不良林)
-      - 🇬🇧 英国-1.99MB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.75MB/s(Youtube:不良林)
-      - 🇯🇵 日本-4.20MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.31MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.04MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.42MB/s(Youtube:不良林)
+      - 🇨🇳 中国-261.0KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-386.5KB/s(Youtube:不良林)
       - 🇸🇬 新加坡-2.18MB/s(Youtube:不良林)
       - 🇸🇬 新加坡-1.97MB/s(Youtube:不良林)
+      - 🇬🇧 英国-1.23MB/s(Youtube:不良林)
+      - 🇺🇸 美国-489.8KB/s(Youtube:不良林)
+      - 🇫🇷 法国-681.8KB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
@@ -72,47 +72,47 @@ proxy-groups:
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇨🇳 中国-374.7KB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-876.2KB/s(Youtube:不良林)
-      - 🇨🇳 中国-164.5KB/s(Youtube:不良林)
-      - 🇫🇷 法国-1.76MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.63MB/s(Youtube:不良林)
-      - 🇬🇧 英国-1.99MB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.75MB/s(Youtube:不良林)
-      - 🇯🇵 日本-4.20MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.31MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.04MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.42MB/s(Youtube:不良林)
+      - 🇨🇳 中国-261.0KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-386.5KB/s(Youtube:不良林)
       - 🇸🇬 新加坡-2.18MB/s(Youtube:不良林)
       - 🇸🇬 新加坡-1.97MB/s(Youtube:不良林)
+      - 🇬🇧 英国-1.23MB/s(Youtube:不良林)
+      - 🇺🇸 美国-489.8KB/s(Youtube:不良林)
+      - 🇫🇷 法国-681.8KB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇨🇳 中国-374.7KB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-876.2KB/s(Youtube:不良林)
-      - 🇨🇳 中国-164.5KB/s(Youtube:不良林)
-      - 🇫🇷 法国-1.76MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.63MB/s(Youtube:不良林)
-      - 🇬🇧 英国-1.99MB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.75MB/s(Youtube:不良林)
-      - 🇯🇵 日本-4.20MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.31MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.04MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.42MB/s(Youtube:不良林)
+      - 🇨🇳 中国-261.0KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-386.5KB/s(Youtube:不良林)
       - 🇸🇬 新加坡-2.18MB/s(Youtube:不良林)
       - 🇸🇬 新加坡-1.97MB/s(Youtube:不良林)
+      - 🇬🇧 英国-1.23MB/s(Youtube:不良林)
+      - 🇺🇸 美国-489.8KB/s(Youtube:不良林)
+      - 🇫🇷 法国-681.8KB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇨🇳 中国-374.7KB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-876.2KB/s(Youtube:不良林)
-      - 🇨🇳 中国-164.5KB/s(Youtube:不良林)
-      - 🇫🇷 法国-1.76MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.63MB/s(Youtube:不良林)
-      - 🇬🇧 英国-1.99MB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.75MB/s(Youtube:不良林)
-      - 🇯🇵 日本-4.20MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.31MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.04MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.42MB/s(Youtube:不良林)
+      - 🇨🇳 中国-261.0KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-386.5KB/s(Youtube:不良林)
       - 🇸🇬 新加坡-2.18MB/s(Youtube:不良林)
       - 🇸🇬 新加坡-1.97MB/s(Youtube:不良林)
+      - 🇬🇧 英国-1.23MB/s(Youtube:不良林)
+      - 🇺🇸 美国-489.8KB/s(Youtube:不良林)
+      - 🇫🇷 法国-681.8KB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -128,16 +128,16 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇨🇳 中国-374.7KB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-876.2KB/s(Youtube:不良林)
-      - 🇨🇳 中国-164.5KB/s(Youtube:不良林)
-      - 🇫🇷 法国-1.76MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.63MB/s(Youtube:不良林)
-      - 🇬🇧 英国-1.99MB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.75MB/s(Youtube:不良林)
-      - 🇯🇵 日本-4.20MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.31MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.04MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.42MB/s(Youtube:不良林)
+      - 🇨🇳 中国-261.0KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-386.5KB/s(Youtube:不良林)
       - 🇸🇬 新加坡-2.18MB/s(Youtube:不良林)
       - 🇸🇬 新加坡-1.97MB/s(Youtube:不良林)
+      - 🇬🇧 英国-1.23MB/s(Youtube:不良林)
+      - 🇺🇸 美国-489.8KB/s(Youtube:不良林)
+      - 🇫🇷 法国-681.8KB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
